kafka1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: kafka1
  name: kafka1
spec:
  ports:
    - name: "9095"
      port: 9095
      targetPort: 9092
  selector:
    io.kompose.service: kafka1
status:
  loadBalancer: {}
