kafka2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: kafka2
  name: kafka2
spec:
  ports:
    - name: "9096"
      port: 9096
      targetPort: 9092
  selector:
    io.kompose.service: kafka2
status:
  loadBalancer: {}
