kafka3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: kafka3
  name: kafka3
spec:
  ports:
    - name: "9097"
      port: 9097
      targetPort: 9092
  selector:
    io.kompose.service: kafka3
status:
  loadBalancer: {}
